test_regress/t/t_force_release.out
         0 d=0,e=0
        10 d=1,e=1
        20 d=1,e=0
%Error: t/t_force_release.v:36:  got='h1 exp='h00000000
